# polito-ci-labs

./: README.md  pyproject.toml
Quixo/: README.md
Quixo/codes/: Quixo_MonteCarlo.ipynb  Quixo_QLearning.ipynb
challenges/: Halloween.ipynb
lab0_python/: hello.ipynb
lab1_a_star/: set-covering.ipynb
lab2_set_covering/: set-covering.ipynb
labs/1_a_star/: set-covering.ipynb
labs/2_evolutionary/: lab2-nim.ipynb
labs/3_black_box/: README.md  lab9.ipynb
labs/3_min_calls/: README.md  lab9.ipynb
labs/4_tic_tac_toe/: README.md  lab10.ipynb
lectures/3_single_state/: set-covering_single-state.ipynb
lectures/4_ea/: set-covering_ea.ipynb
lectures/5_rl/: reinforcement_learning.ipynb
t2_n_friends/: n_friends.ipynb
t3_hill_climbing/: set-covering.ipynb
